# pytorch-tutorial

./: .gitignore  LICENSE  README.md  pyproject.toml
pytorch_tutorial/: 01_pytorch_fundamentals.ipynb  02_embeddings_theory.ipynb  03_finetune_bert_retrieval.ipynb  04_pytorch_lightning.ipynb  04_transformer_bert_deep_dive.ipynb  05_pytorch_lightning.ipynb
research/: RESEARCH-PLAN.md
