[project]
name = "pytorch_tutorial"
version = "0.1.0"
description = "Tutorial for pytorch"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.13.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.26.0",
    "torchviz>=0.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
